--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,6 @@
-highrise-bot-sdk == 23.3.4
-flask
-npm
+streamlit==1.20.0
+requests
+pandas
+numpy
+python-dotenv  # if you're using environment variables
+highrise-python  # if you're using a specific library for Highrise
